fix z-index

--- a/styles/helvetica/sidebar.scss
+++ b/styles/helvetica/sidebar.scss
@@ -6,6 +6,7 @@
   right: 5%;
   height: 100%;
   overflow: hidden;
+  z-index: 100;
 
   a {
     color: #000;
